<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="cat_checkbox_title">Checkbox</string>
    <string name="cat_checkbox_description">The CheckBox provides a selectable element, usually part of a list,that toggles between two states.</string>
    <string name="cat_checkbox_intro">Below are Material checkboxes.</string>
    <string name="cat_checkbox_disabled_guide">CheckBox elements that are disabled cannot be interacted with and willappear faded.</string>
    <string name="cat_checkbox_enabled">Enabled</string>
    <string name="cat_checkbox_disabled">Disabled</string>
    <string name="cat_checkbox_enablable_description">Check this checkbox to control the enabled state of the boxes below.</string>
    <string name="cat_checkbox_toggle">Controlled by a checkbox</string>
    <string name="cat_indeterminate_description">The checkboxes below have a parent/child relationship. The parent\'s statedepends on the state of the children.</string>
    <string name="cat_checkbox_indeterminate">Parent checkbox</string>
    <string name="cat_checkbox_indeterminate_child">Child checkbox</string>
    <string name="cat_checkbox_no_text">Below is a checkbox with no text.</string>
    <string name="cat_checkbox_toggle_error">Check this checkbox to control the error state of all checkboxes in this page.</string>
</resources>
